--- a/index.html
+++ b/index.html
@@ -1192,9 +1192,9 @@
                         <a href=""><img class="footer-authentic-img-2" src="./assets/img/auth.jpg" alt=""></a>
                     </div>
                     <div class="footer-info">
-                        <p class="footer-info-text">Địa chỉ: Tầng 4-5-6, Tòa nhà Capital Place, số 29 đường Liễu Giai, Phường Ngọc Khánh, Quận Ba Đình, Thành phố Hà Nội, Việt Nam. Tổng đài hỗ trợ: 19001221 - Email: cskh@hotro.shopee.vn</p>
+                        <p class="footer-info-text">Địa chỉ: Tầng 4-5-6, Tòa nhà Capital Place, số 3 nghách 177/40, Phố Thanh Đàm, Phường Thanh Trì, Thành phố Hà Nội, Việt Nam. Email:hotboy7102@gmail.com</p>
                         <p class="footer-info-text">Chịu Trách Nhiệm Quản Lý Nội Dung: Nguyễn Việt Long - Điện thoại liên hệ: 0859802360 (ext 7102)</p>
-                        <p class="footer-info-text">Mã số doanh nghiệp: 0106773786 do Sở Kế hoạch & Đầu tư TP Hà Nội cấp lần đầu ngày 07/01/2002</p>
+                        <p class="footer-info-text">Mã số doanh nghiệp: 07012002 do Sở Kế hoạch & Đầu tư TP Hà Nội cấp lần đầu ngày 07/01/2002</p>
                     </div>
                 </div>
 
@@ -1202,7 +1202,7 @@
             
         </footer>
     </div>
-    <p class="footer-info-text" style="background-color: rgb(179, 156, 156); padding: 15px; text-align: center; font-size: 1.6rem;">@2023 Bản quyền thuộc về Long đẹp trai</p>
+    <p class="footer-info-text" style="background-color: rgb(179, 156, 156); padding: 15px; text-align: center; font-size: 1.6rem;">@2023 Bản quyền trang web thuộc về Long đẹp trai</p>
     <!-- modal -->
     <!-- <div class="modal">
         <div class="modal_overlay">
